# suppercx

./: .gitignore  backend-ci-cd.yml
.github/workflows/: backend-ci-cd.yml
backend/: .env.example  Dockerfile  Makefile  README  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 18c65d1bf60b_initial_migration.py  873538c8ef96_create_initial_tables.py  a4ba77a67b69_update_models_for_production.py  ba3aed466ed1_a_badapted_models_for_frontend_.py  d0f2d257fac9_initial_migration.py  f1580ac3abcc_add_relationship_between_ticket_and_.py
backend/app/: __init__.py  app.py  database.py  main.py  models.py  schemas.py
backend/app/cx_crew/src/: crew.py  main.py
backend/app/cx_crew/src/config/: agents.yaml  tasks.yaml
backend/app/cx_crew/src/tools/: AddVideoToVectorDatabaseTool.py  FetchLatestVideosFromYouTubeSearchTool.py
backend/app/cx_crew/utils/: voyageaiEmbeddingModel.py  youtubeRagUtility.py
backend/app/routers/: agents.py  ticketmessages.py  tickets.py  users.py  whatsapp.py
backend/app/services/: whatsapp_service.py
backend/scripts/: seed_data.py
backend/utils/: responseWhatsappMessage.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.js  page.js
frontend/src/app/ticket/: page.js
frontend/src/app/ticket/[id]/: page.js
frontend/src/components/: EmptyState.jsx  Spinner.jsx  TicketDashboard.jsx  TicketDetail.jsx  TicketTable.jsx
frontend/src/components/ui/: pagination.jsx
