[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alvaro Acevedo <alvaro.acevedo.ing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
fastapi = "^0.115.3"
crewai = { extras = ["tools"], version = "^0.76.2" }
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]
sqlalchemy-stubs = "^0.4"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
